[project]
name = "tenzir"
version = "5.2.0"
description = "A security telemetry engine for detection and response"
authors = [{ name = "Tenzir", email = "engineering@tenzir.com" }]
maintainers = [{ name = "Tenzir", email = "engineering@tenzir.com" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Security",
  "Topic :: Software Development :: Object Brokering",
  "Topic :: System :: Distributed Computing",
]
dependencies = ["pyarrow>=11"]

[project.urls]
Homepage = "https://tenzir.com"
Documentation = "https://docs.tenzir.com"
Repository = "https://github.com/tenzir/tenzir"

[project.optional-dependencies]
operator = ["python-box>=7.0,<8.0", "pandas>=2.1.3,<3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto" # required for async fixtures

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["dynaconf", "pyarrow"]
ignore_missing_imports = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for explanations.
#select = ["E2", "E4", "E7", "E9", "F", "B", "I", "Q", "W"]
select = ["ALL"]
ignore = ["FA", "D1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
