[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
  "tenzir-common",
  "tenzir-operator",
  "tenzir",
]

[tool.uv.sources]
tenzir-common = { workspace = true }
tenzir-operator = { workspace = true }
tenzir = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25.2,<0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto" # required for async fixtures

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "dynaconf",
  "pyarrow",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["FA", "D1"]
